2005-07-08  Michael Natterer  <mitch@gimp.org>

	* tools/widgets.c
	* libgimpwidgets/visual-index.xml
	* libgimpwidgets/images/gimp-page-selector.png: added
	GimpPageSelector to doc-shooter.

2005-07-07  Michael Natterer  <mitch@gimp.org>

	* libgimp*/tmpl/*.sgml: gtk-doc 1.4 added the Stability_Level
	section all over the place.

2005-07-05  Manish Singh  <yosh@gimp.org>

	* tools/shooter.c: Reorder #includes so things compile everywhere.
	Fixes bug #309562.

2005-07-01  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/libgimpwidgets-docs.sgml
	* libgimpwidgets/libgimpwidgets-sections.txt
	* libgimpwidgets/libgimpwidgets.types
	* libgimpwidgets/tmpl/gimppageselector.sgml: added GimpPageSelector.

2005-06-27  Sven Neumann  <sven@gimp.org>

	* tools/widgets.c: added an explanatory label to GimpBrowser.

	* libgimpwidgets/images: updated screenshots.

2005-06-27  Sven Neumann  <sven@gimp.org>

	* tools/Makefile.am: always build the doc-shooter; keeps it from
	bit-rotting.

	* tools/widgets.c: added GimpEnumLabel. 

2005-06-27  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/libgimpwidgets-sections.txt
	* libgimpwidgets/tmpl/gimpenumcombobox.sgml: updated.

2005-06-26  Sven Neumann  <sven@gimp.org>

	* libgimp/libgimp-docs.sgml
	* libgimp/libgimp-sections.txt
	* libgimp/libgimp.types: updated.

	* libgimp/tmpl/gimpfontselectbutton.sgml: added new file.

	* libgimp/tmpl/gimpgimprc.sgml: regenerated.

2005-06-25  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/libgimpwidgets-docs.sgml
	* libgimpwidgets/libgimpwidgets-sections.txt
	* libgimpwidgets/libgimpwidgets.types
	* libgimpwidgets/tmpl/gimpenumlabel.sgml
	* libgimpwidgets/tmpl/gimppropwidgets.sgml: added GimpEnumLabel.

2005-06-24  Sven Neumann  <sven@gimp.org>

	* libgimpconfig/tmpl/gimpcolorconfig.sgml
	* libgimpwidgets/tmpl/gimpbrowser.sgml: regenerated.

2005-06-14  Sven Neumann  <sven@gimp.org>

	* */Makefile.am: removed obsolete AUTOMAKE_OPTIONS. 

2005-06-04  Sven Neumann  <sven@gimp.org>
