@@ -52,11 +52,11 @@ GTKDOC_CFLAGS = \
 	-DGIMP_ENABLE_CONTROLLER_UNDER_CONSTRUCTION
 
 GTKDOC_LIBS = \
-        $(top_builddir)/libgimpbase/libgimpbase-$(GIMP_API_VERSION).la        \
-        $(top_builddir)/libgimpcolor/libgimpcolor-$(GIMP_API_VERSION).la      \
-        $(top_builddir)/libgimpmath/libgimpmath-$(GIMP_API_VERSION).la        \
-        $(top_builddir)/libgimpconfig/libgimpconfig-$(GIMP_API_VERSION).la        \
-        $(top_builddir)/libgimpwidgets/libgimpwidgets-$(GIMP_API_VERSION).la  \
+	$(top_builddir)/libgimpbase/libgimpbase-$(GIMP_API_VERSION).la		\
+	$(top_builddir)/libgimpcolor/libgimpcolor-$(GIMP_API_VERSION).la	\
+	$(top_builddir)/libgimpmath/libgimpmath-$(GIMP_API_VERSION).la		\
+	$(top_builddir)/libgimpconfig/libgimpconfig-$(GIMP_API_VERSION).la	\
+	$(top_builddir)/libgimpwidgets/libgimpwidgets-$(GIMP_API_VERSION).la	\
 	@GTK_LIBS@
 
 
