@@ -2,6 +2,7 @@
 #include <libgimpwidgets/gimpwidgets.h>
 #include <libgimpwidgets/gimpcontroller.h>
 
+gimp_browser_get_type
 gimp_button_get_type
 gimp_cell_renderer_color_get_type
 gimp_cell_renderer_toggle_get_type
@@ -34,5 +35,6 @@ gimp_pick_button_get_type
 gimp_pixmap_get_type
 gimp_preview_area_get_type
 gimp_preview_get_type
+gimp_scrolled_preview_get_type
 gimp_size_entry_get_type
 gimp_unit_menu_get_type
